[UPDATE] added title and images

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
             <!-- TITLE AND LONDON EYE PHOTOS -->
             <div class="col-12">
                 <div>
-
+                    <h1 class="text-center fw-bold my-5">Il mio viaggio a Londra</h1>
+                    <div class="d-flex justify-content-center">
+                        <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="0" class="mx-2">
+                        <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="1" class="mx-2">
+                        <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="2" class="mx-2">
+                    </div>
                 </div>
             </div>
 
