--- a/index.html
+++ b/index.html
@@ -31,8 +31,38 @@
 
             <!-- BUDGET SECTION -->
             <div class="col-12">
-                <div>
-
+                <div class="my-5">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Numero</th>
+                                <th scope="col">Descrizione</th>
+                                <th scope="col">Costo</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Biglietto aereo</td>
+                                <td>120€</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Biglietto aereo</td>
+                                <td>120€</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Biglietto aereo</td>
+                                <td>120€</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Totale</th>
+                                <td></td>
+                                <td>360€</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
 
