[UPDATE] Added To-Do Section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <!-- BUDGET SECTION -->
             <div class="col-12">
                 <div class="my-5">
+                    <h2>Le mie spese</h2>
                     <table class="table">
                         <thead>
                             <tr>
@@ -69,7 +70,25 @@
             <!-- THINGS TO DO SECTION -->
             <div class="col-12">
                 <div>
-
+                    <h2>Cose da fare</h2>
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            Visitare la Tower of London
+                            <i class="fa-solid fa-x"></i>
+                        </li>
+                        <li class="list-group-item">
+                            Visitare Greenwich
+                            <i class="fa-solid fa-check"></i>
+                        </li>
+                        <li class="list-group-item">
+                            Ascoltare un artista di strada a Covent Garden
+                            <i class="fa-solid fa-check"></i>
+                        </li>
+                        <li class="list-group-item">
+                            Mangiare il tipico Fish and Chips inglese
+                            <i class="fa-solid fa-x"></i>
+                        </li>
+                    </ul>
                 </div>
             </div>
 
