[UPDATE] info section

--- a/index.html
+++ b/index.html
@@ -94,8 +94,29 @@
 
             <!-- INFO'S SECTION -->
             <div class="col-12">
-                <div>
-
+                <div class="my-5">
+                    <h2>Info utili:</h2>
+                    <ol>
+                        <li>Numeri utili di emergenza
+                            <ul>
+                                <li>999 - Emergenza</li>
+                                <li>101 - Numero polizia</li>
+                                <li>111 - Numero assistenza medica</li>
+                            </ul>
+                        </li>
+                        <li>Hotel
+                            <ul>
+                                <li>Nome hotel: Buckingham Palace</li>
+                                <li>Indirizzo hotel: Westmister, London SW1A 1AA, Regno Unito </li>
+                            </ul>
+                        </li>
+                        <li>Aereo
+                            <ul>
+                                <li>Volo di andata: Y1234X ore 9:30 da Milano Malpensa</li>
+                                <li>Volo di ritorno: Y1236X ore 18:30 da London Hearthrow</li>
+                            </ul>
+                        </li>
+                    </ol>
                 </div>
             </div>
 
