[UPDATE] footer section images and title done

--- a/index.html
+++ b/index.html
@@ -122,8 +122,16 @@
 
             <!-- PHOTO'S SECTION -->
             <div class="col-12">
-                <div>
-
+                <div class="my-5">
+                    <h2 class="mb-5">Le Foto</h2>
+                    <div class="d-flex justify-content-center">
+                        <img class="mx-2"
+                            src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg"
+                            alt="Monumento Londinese">
+                        <img class="mx-2"
+                            src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n"
+                            alt="Monumento Londinese 2">
+                    </div>
                 </div>
             </div>
 
